# stale

./: .gitignore  Cargo.toml  README.md  install.sh  llms-full.txt  llms.txt
.github/workflows/: ci.yml  docs.yml  release.yml
Formula/: stale.rb
benches/: hash_benchmark.rs
docs/: _config.yml  index.md  installation.md  llms-txt.md  sum-file.md  usage.md
src/: lib.rs  main.rs
tests/: integration_test.rs
