[package]
name = "hash-guard"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to run or skip commands based on file content hashes"
license = "Apache-2.0"
repository = "https://github.com/th1nkful/hash-guard"

[[bin]]
name = "hash-guard"
path = "src/main.rs"

[lib]
name = "hash_guard"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.10"
