[package]
name = "stale"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to run or skip commands based on file content hashes"
license = "Apache-2.0"
repository = "https://github.com/th1nkful/stale"

[[bin]]
name = "stale"
path = "src/main.rs"

[[bin]]
name = "test_helper"
path = "src/bin/test_helper.rs"

[lib]
name = "stale"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
serde_json = "1.0"
toml = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
hex = "0.4"
sha2 = "0.10"
tempfile = "3.10"

[[bench]]
name = "hash_benchmark"
harness = false
